fix stats-container alignment

--- a/style.css
+++ b/style.css
@@ -18,16 +18,19 @@ header {
   margin: 0;
 }
 
-.score-container {
-  display: flex;
-  align-items: center;
-  gap: 42px;
+.stats-container {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  text-align: center;
+  column-gap: 54px;
+  margin-top: 21px;
 }
 
 #score {
-  align-self: center;
   font-size: 22pt;
   font-weight: 600;
+  margin: 20px 0;
+  align-self: center;
 }
 
 .hand-buttons {
